--- a/src/components/ContactForm/styles.css
+++ b/src/components/ContactForm/styles.css
@@ -1,15 +1,28 @@
-.form {
+* {
+  box-sizing: border-box;
+}
+
+textarea {
+  display: block;
+  width: 100%;
+  height: 150px;
+  border: 2px solid #131313;
+  resize: none;
+}
+
+.mainContactForm {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 300px;
+  width: 100%;
   border: 2px solid #131313;
 }
 
 .inputFieldDiv {
   display: flex;
   flex-direction: column;
+  width: 90%;
 }
 
 .loginLogo {
@@ -30,7 +43,6 @@
   padding: 0.35rem;
   font-size: 1rem;
   margin-bottom: 0.5rem;
-  width: 100%;
 }
 
 .loginBtn {
@@ -42,7 +54,7 @@
   line-height: 1rem;
   cursor: pointer;
   margin-bottom: 2rem;
-  width: 100%;
+  width: 90%;
   height: 35px;
   margin-top: 1rem;
   color: #fafafa;
