--- a/src/components/ContactForm/styles.css
+++ b/src/components/ContactForm/styles.css
@@ -8,6 +8,7 @@ textarea {
   height: 150px;
   border: 2px solid #131313;
   resize: none;
+  padding: 0.35rem;
 }
 
 .mainContactForm {
@@ -19,20 +20,19 @@ textarea {
   border: 2px solid #131313;
 }
 
+.title {
+  text-align: center;
+}
+
 .inputFieldDiv {
   display: flex;
   flex-direction: column;
   width: 90%;
 }
 
-.loginLogo {
-  margin: 1rem 0rem;
-  height: 50px;
-}
-
 .inputFieldDiv > label {
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   color: #232323;
 }
 
@@ -61,6 +61,5 @@ textarea {
 }
 
 .loginBtn:hover {
-  box-shadow: 0px 0px 7px 3px rgba(0, 0, 0, 0.1);
-  transform: scale(1.03);
+  box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.15);
 }
