--- a/src/components/Progress/styles.css
+++ b/src/components/Progress/styles.css
@@ -1,4 +1,7 @@
 .progressContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 30px;
   background-color: #fafafa;
@@ -9,8 +12,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fafafa;
-  width: 50%;
+
+  width: 0%;
   height: 100%;
   background-color: #171717;
+  transition: 3s ease-in-out forwards;
+}
+
+.value {
+  margin: 0px;
+  position: absolute;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #fafafa;
+  padding: 0.25rem 0.5rem;
+  text-align: center;
+  background-color: #171717;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 5px;
 }
