--- a/src/components/ExpandableArea/styles.css
+++ b/src/components/ExpandableArea/styles.css
@@ -47,7 +47,7 @@
   to {
     opacity: 1;
     height: 200px;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
   }
 }
 
@@ -55,7 +55,7 @@
   from {
     opacity: 1;
     height: 200px;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
   }
   to {
     opacity: 0;
